# UsbCamera

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/com/bbt2000/usbcamera/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/bbt2000/usbcamera/: MainActivity.kt
app/src/main/java/com/bbt2000/usbcamera/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/bbt2000/usbcamera/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
usbcamera/: build.gradle
usbcamera/src/androidTest/java/com/bbt2000/usbcamera/: ExampleInstrumentedTest.kt
usbcamera/src/main/cpp/: CMakeLists.txt  utilbase.h
usbcamera/src/main/cpp/UVCCamera/: CMakeLists.txt  UVCButtonCallback.cpp  UVCCamera.cpp  UVCPreview.cpp  UVCStatusCallback.cpp  libUVCCamera.h  serenegiant_usb_UVCCamera.cpp
usbcamera/src/main/cpp/libusb/: CMakeLists.txt
usbcamera/src/main/cpp/libusb/libusb/: hotplug.c
usbcamera/src/main/cpp/libusb/libusb/os/: android_netlink.c  android_usbfs.c  poll_posix.c
usbcamera/src/main/cpp/libuvc/: CMakeLists.txt
usbcamera/src/main/java/com/bbt2000/usbcamera/: NativeLib.kt
